--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Semtle_FE</string>
+    <string name="kakao_app_key">1c0e30af9cb006afc9fad91062dbba5f</string>
 </resources>
